--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,6 +12,7 @@ html, body {
     width: 100vw;
     background-color: black;
 }
+
 body {
     background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
     background-size: cover;
@@ -32,4 +33,12 @@ section#telefone {
     height: 627px;
     width: 311px;
     background: url(../imagens/frame-iphone.png) no-repeat;
+}
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
 }
